--- a/client/package.json
+++ b/client/package.json
@@ -1,23 +1,39 @@
 {
-  "name": "poet-app",
+  "name": "client-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.0",
+    "@mui/material": "^5.8.1",
+    "@mui/styled-engine-sc": "^5.8.0",
+    "@mui/styles": "^5.8.0",
+    "@mui/x-data-grid": "^5.11.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.2.0",
-    "date-fns": "^2.29.3",
-    "flowbite": "^1.5.4",
-    "flowbite-react": "^0.3.5",
+    "axios": "^0.27.2",
+    "cloudinary": "^1.29.1",
+    "cors": "^2.8.5",
+    "date-fns": "^2.28.0",
+    "dropzone": "^6.0.0-beta.2",
+    "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
-    "react-router-dom": "^6.4.4",
-    "react-scripts": "5.0.1",
-    "react-toastify": "^9.1.1",
-    "web-vitals": "^2.1.4"
+    "moment": "^2.29.3",
+    "react": "^18.1.0",
+    "react-dom": "^18.0.0",
+    "react-dropzone": "^14.2.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^2.1.3",
+    "react-scroll-to-bottom": "^4.2.0",
+    "react-search-autocomplete": "^7.2.1",
+    "react-spinners": "^0.12.0",
+    "react-stripe-checkout": "^2.6.3",
+    "react-time-range": "^1.0.4",
+    "react-toastify": "^9.0.1",
+    "socket.io-client": "^4.5.1",
+    "styled-components": "^5.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,8 +60,7 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
+    "typescript": "^4.6.4",
+    "web-vitals": "^2.1.4"
   }
 }
