--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,12 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "react-search-autocomplete": "^8.2.1",
+    "react-spinners": "^0.13.7",
     "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
